fixed bug in cluster popping algorithm